fix: change PUT method to POST method